// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionHeader anonymous and muted 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "lightgrey",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "height": "auto",
      "justifyContent": "space-between",
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-heavy",
            "fontSize": 24,
          },
          undefined,
        ]
      }
    >
      All Submissions
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "color": "#8B969E",
            "fontSize": 14,
            "fontWeight": "500",
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
          },
        ]
      }
    >
      Grades muted, Anonymous grading
    </Text>
  </View>
  <TouchableOpacity
    accessibilityLabel="Filter Submissions"
    accessibilityTraits="button"
    hitSlop={
      Object {
        "bottom": 15,
        "left": 15,
        "right": 15,
        "top": 15,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "marginBottom": 1,
        "width": "auto",
      }
    }
    testID="submission-list.filter"
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 16,
                "fontWeight": "500",
              },
              undefined,
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Filter
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`SubmissionHeader anonymous grading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "lightgrey",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "height": "auto",
      "justifyContent": "space-between",
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-heavy",
            "fontSize": 24,
          },
          undefined,
        ]
      }
    >
      All Submissions
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "color": "#8B969E",
            "fontSize": 14,
            "fontWeight": "500",
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
          },
        ]
      }
    >
      Anonymous grading
    </Text>
  </View>
  <TouchableOpacity
    accessibilityLabel="Filter Submissions"
    accessibilityTraits="button"
    hitSlop={
      Object {
        "bottom": 15,
        "left": 15,
        "right": 15,
        "top": 15,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "marginBottom": 1,
        "width": "auto",
      }
    }
    testID="submission-list.filter"
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 16,
                "fontWeight": "500",
              },
              undefined,
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Filter
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`SubmissionHeader muted grading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "lightgrey",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "height": "auto",
      "justifyContent": "space-between",
      "paddingBottom": 8,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-heavy",
            "fontSize": 24,
          },
          undefined,
        ]
      }
    >
      All Submissions
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "color": "#8B969E",
            "fontSize": 14,
            "fontWeight": "500",
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
          },
        ]
      }
    >
      Grades muted
    </Text>
  </View>
  <TouchableOpacity
    accessibilityLabel="Filter Submissions"
    accessibilityTraits="button"
    hitSlop={
      Object {
        "bottom": 15,
        "left": 15,
        "right": 15,
        "top": 15,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "marginBottom": 1,
        "width": "auto",
      }
    }
    testID="submission-list.filter"
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#374A59",
                "fontSize": 16,
                "fontWeight": "500",
              },
              undefined,
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Filter
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
